--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simon</title>
+    <link
+      rel="shortcut icon"
+      href="./images/simonFavicon.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -20,50 +25,59 @@
         alt="Among Us Logo"
       />
     </div>
-    <div class="game-title"><h1 id="level-title">Simon Says Mockup</h1></div>
+    <div class="game-title">
+      <h1 id="level-title">Simon Says Mockup</h1>
+    </div>
     <div class="container">
       <div class="first-box">
         <div class="levels">
-          <div type="button" id="green" class="circle"></div>
-          <div type="button" id="green" class="circle"></div>
-          <div type="button" id="green" class="circle"></div>
-          <div type="button" id="green" class="circle"></div>
-          <div type="button" id="green" class="circle"></div>
+          <div type="button" id="lvl-1" class="circle"></div>
+          <div type="button" id="lvl-2" class="circle"></div>
+          <div type="button" id="lvl-3" class="circle"></div>
+          <div type="button" id="lvl-4" class="circle"></div>
+          <div type="button" id="lvl-5" class="circle"></div>
         </div>
         <div class="buttons">
           <div class="screen grid-layout">
-            <div type="button" id="green" class="btn show rad-tl blue"></div>
-            <div type="button" id="green" class="btn show"></div>
-            <div type="button" id="green" class="btn show rad-tr blue"></div>
-            <div type="button" id="green" class="btn show"></div>
-            <div type="button" id="green" class="btn show"></div>
-            <div type="button" id="green" class="btn show"></div>
-            <div type="button" id="green" class="btn show rad-bl blue"></div>
-            <div type="button" id="green" class="btn show"></div>
-            <div type="button" id="green" class="btn show rad-br blue"></div>
+            <div type="button" id="scr-1" class="btn show rad-tl"></div>
+            <div type="button" id="scr-2" class="btn show"></div>
+            <div type="button" id="scr-3" class="btn show rad-tr"></div>
+            <div type="button" id="scr-4" class="btn show"></div>
+            <div type="button" id="scr-5" class="btn show"></div>
+            <div type="button" id="scr-6" class="btn show"></div>
+            <div type="button" id="scr-7" class="btn show rad-bl"></div>
+            <div type="button" id="scr-8" class="btn show"></div>
+            <div type="button" id="scr-9" class="btn show rad-br"></div>
           </div>
         </div>
       </div>
       <div class="second-box">
         <div class="levels">
-          <div type="button" id="green" class="circle"></div>
-          <div type="button" id="green" class="circle"></div>
-          <div type="button" id="green" class="circle"></div>
-          <div type="button" id="green" class="circle"></div>
-          <div type="button" id="green" class="circle"></div>
+          <div type="button" id="circle-1" class="circle"></div>
+          <div type="button" id="circle-2" class="circle"></div>
+          <div type="button" id="circle-3" class="circle"></div>
+          <div type="button" id="circle-4" class="circle"></div>
+          <div type="button" id="circle-5" class="circle"></div>
         </div>
         <div class="buttons-2 grid-layout">
-          <div type="button" id="green" class="btn pressed"></div>
-          <div type="button" id="green" class="btn"></div>
-          <div type="button" id="green" class="btn"></div>
-          <div type="button" id="green" class="btn"></div>
-          <div type="button" id="green" class="btn"></div>
-          <div type="button" id="green" class="btn"></div>
-          <div type="button" id="green" class="btn"></div>
-          <div type="button" id="green" class="btn"></div>
-          <div type="button" id="green" class="btn"></div>
+          <div type="button" id="btn-1" class="btn click"></div>
+          <div type="button" id="btn-2" class="btn click"></div>
+          <div type="button" id="btn-3" class="btn click"></div>
+          <div type="button" id="btn-4" class="btn click"></div>
+          <div type="button" id="btn-5" class="btn click"></div>
+          <div type="button" id="btn-6" class="btn click"></div>
+          <div type="button" id="btn-7" class="btn click"></div>
+          <div type="button" id="btn-8" class="btn click"></div>
+          <div type="button" id="btn-9" class="btn click"></div>
         </div>
       </div>
     </div>
+    <div class="game-start"><h1 class="start">Press any key to start.</h1></div>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./game.js"></script>
   </body>
 </html>
